# SmallGameFramework

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: ci.yml
src/: Animation.cpp  Animation.hpp  Application.cpp  Application.hpp  Entity.hpp  State.cpp  State.hpp  TestEntity.cpp  TestEntity.hpp  TestState.cpp  TestState.hpp  main.cpp
src/Core/: Application.cpp  Application.hpp  Resources.hpp
src/Entity/: Animation.cpp  Button.cpp  Button.hpp  Entity.hpp  Explosion.cpp  Explosion.hpp  TestEntity.cpp  TestEntity.hpp
src/Entity/Base/: Animation.cpp  Animation.hpp
src/State/: MenuState.cpp  MenuState.hpp  PlayState.cpp  PlayState.hpp  State.cpp  State.hpp  TestState.cpp  TestState.hpp
src/State/Base/: State.cpp  State.hpp
